# bottlefish-templates

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cli/: CMakeLists.txt  test_main.cpp
cmake/: settings.cmake
lib/: CMakeLists.txt
lib/bvh/: aabb.cpp
lib/include/bvh/: aabb.hpp
lib/include/utils/: bbox.hpp  grid2d.hpp  grid3d.hpp
src/: CMakeLists.txt
src/utils/: CMakeLists.txt  bbox.cppm
